# HoloLens

HoloLens Ros Communication/Lens side/: .gitignore
HoloLens Ros Communication/Lens side/Unity/Assets/Scripts/: RosCommunication.cs  TargetSelector.cs
HoloLens Ros Communication/Server side/unity_robot_comm/: package.xml  pyproject.toml  setup.py
HoloLens Ros Communication/Server side/unity_robot_comm/unity_robot_comm/: communicatin_node.py  communication_node.py
